@@ -7,6 +7,7 @@ trunk
 * added 'return' statements to error conditions in the backend algebra
   calculations.
 * fix crash in Hessian calculation when no objective function is specified
+* throw an error if standard errors are enabled and Hessian calculation is disabled
 
 Release 1.3.0-2168 (September 17, 2012)
 =======================================
